testsuite/tests/rename/should_fail/T25901_sub_w.stderr
T25901_sub_w.hs:3:29: error: [GHC-04611]
    Unsupported use of keyword ‘data’

T25901_sub_w.hs:5:19: error: [GHC-81284]
    Illegal import form, this syntax can only be used to bundle
    pattern synonyms with types in module exports.

T25901_sub_w.hs:5:31: error: [GHC-04611]
    Unsupported use of keyword ‘data’

